# robot-safety-watchdog

./: .env.example  .gitignore  README.md  config.py  dashboard.py  index.html  logs.json  main.py  pyproject.toml  requirements.txt  serve.py
anchors/: README.md
harness/: OPENARM_INTEGRATION.md  README.md  RUNBOOK.md  __init__.py  architecture-workflows.md  core.py  harness-spec.md  logger.py  models.py  openarm_pause_resume.py  openarm_replay_watchdog.py  openarm_robot_factory.py  openarm_smoke.py  perception.py  policy.py  robot.py  runtime.py
harness/scripts/: __init__.py  openarm_pause_resume.py  openarm_replay_watchdog.py  openarm_robot_factory.py  openarm_smoke.py
scripts/: generate_futures.py  generate_vlm_logs.py  hello_reachy.py  imagine_future.py
src/: detector.py  future_preview.py  multi_camera.py  orientation.py  overlay.py  pose.py  rules.py  vlm_judge.py  watchdog.py  world_model.py
