[project]
name = "robot-safety-watchdog"
version = "0.1.0"
description = "Generalist external vision watchdog for learning-based home robots"
readme = "README.md"
# MediaPipe has no wheels for 3.13 yet; pin to a supported interpreter.
# uv will fetch a matching Python automatically.
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.9",
    "ultralytics>=8.3",
    "anthropic>=0.69",
    # torch 2.2.2 was built against NumPy 1.x; NumPy 2.x breaks its C-API interop.
    "numpy>=1.26,<2",
    "python-dotenv>=1.0",
    # torch/torchvision dropped macOS Intel (x86_64) wheels after 2.2.2 / 0.17.2.
    # Pin to the last versions with universal wheels so the project installs on
    # Intel Macs too (still satisfies ultralytics' torch>=1.8).
    "torch>=2.0,<2.3",
    "torchvision>=0.15,<0.18",
    "lap>=0.5.13",
]

[project.optional-dependencies]
# Fingertip-level precision. No wheels for macOS Intel (x86_64) — install with
# `uv run --extra hands main.py` on arm64 macOS / Linux / Windows. Without it,
# the watchdog falls back to person-box proximity (everything else still runs,
# including blade orientation/tip from the YOLO mask).
hands = ["mediapipe>=0.10"]
# World-model track: V-JEPA 2 latent OOD danger scoring. Heavy (ViT-L) —
# `uv run --extra worldmodel main.py`. One-time ~1.2GB model download.
worldmodel = [
    # transformers 5.x requires torch>=2.4, which has no macOS-Intel wheels.
    # 4.53+ has V-JEPA 2 and still runs on the pinned torch 2.2.2.
    "transformers>=4.53,<5",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "einops>=0.7",
    "scikit-learn>=1.3",  # PCA for the latent map + simple OOD model
]
demo = ["rerun-sdk>=0.23"]

[project.scripts]
watchdog = "main:main"
openarm-harness-smoke = "harness.scripts.openarm_smoke:main"
openarm-harness-pause = "harness.scripts.openarm_pause_resume:main"
openarm-harness-replay-watchdog = "harness.scripts.openarm_replay_watchdog:main"

[tool.uv]
# Nothing special needed; listed for discoverability.
