[project]
name = "robot-safety-watchdog"
version = "0.1.0"
description = "Generalist external vision watchdog for learning-based home robots"
readme = "README.md"
# MediaPipe has no wheels for 3.13 yet; pin to a supported interpreter.
# uv will fetch a matching Python automatically.
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.9",
    "ultralytics>=8.3",
    "anthropic>=0.69",
    "python-dotenv>=1.0",
    "lap>=0.5.13",
    # --- platform-split pins ---------------------------------------------
    # macOS Intel (x86_64) ceilings: torch/torchvision dropped x86_64-mac wheels
    # after 2.2.2/0.17.2, and torch 2.2.2 needs NumPy 1.x. Everywhere else
    # (Linux/GPU box for the generative + world-model tracks) use modern versions.
    "torch>=2.0,<2.3 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision>=0.15,<0.18 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=1.26,<2 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision>=0.17 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numpy>=1.26 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
# Fingertip-level precision. No wheels for macOS Intel (x86_64) — install with
# `uv run --extra hands main.py` on arm64 macOS / Linux / Windows. Without it,
# the watchdog falls back to person-box proximity (everything else still runs,
# including blade orientation/tip from the YOLO mask).
hands = ["mediapipe>=0.10"]
# World-model track: V-JEPA 2 latent OOD danger scoring. Heavy (ViT-L) —
# `uv run --extra worldmodel main.py`. One-time ~1.2GB model download.
worldmodel = [
    # transformers 5.x requires torch>=2.4 (no macOS-Intel wheels), so cap it
    # there; on Linux/GPU let it float to a modern version.
    "transformers>=4.53,<5 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers>=4.53 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "einops>=0.7",
    "scikit-learn>=1.3",  # PCA for the latent map + simple OOD model
]
demo = ["rerun-sdk>=0.23"]
# Generative future-preview track (Stable Video Diffusion). GPU/CUDA only —
# `uv run --extra generative ...` on the GPU box. CLIP (for few-shot danger
# anchors) comes via transformers. Install a CUDA torch build there.
generative = [
    "diffusers>=0.27",
    "accelerate>=0.30",
    "transformers>=4.40",
    "pillow>=10",
    "imageio>=2.34",
]

[project.scripts]
watchdog = "main:main"
openarm-harness-smoke = "harness.scripts.openarm_smoke:main"
openarm-harness-pause = "harness.scripts.openarm_pause_resume:main"
openarm-harness-replay-watchdog = "harness.scripts.openarm_replay_watchdog:main"

[tool.uv]
# Nothing special needed; listed for discoverability.
